--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -2,7 +2,16 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    align-items: center;
     height: 100%;
-    margin-top: 50px;
+    width: 100%;
+    align-items: center;
+    margin-top: 100px;
+}
+
+.btn-submit {
+
+    background-color: #1890ff;
+    color: white;
+    padding: 5px;
+    border-radius: 2px;
 }
